Fix Safari layout bugs with height: 100% vs flexbox
Progress

Title good everywhere

Done layout

Done, move on to intro

Stable layout

--- a/client/src/ConsentPhase.css
+++ b/client/src/ConsentPhase.css
@@ -1,5 +1,4 @@
 .ConsentPhase {
-  height: 100%;
   display: flex;
 }
 
@@ -12,7 +11,6 @@
 
 .ConsentPhase-text {
   flex: 1;
-  margin-top: 10px;
   white-space: pre-wrap;
 }
 
@@ -22,6 +20,5 @@
   justify-content: space-between;
   align-items: center;
   color: blue;
-  height: 100%;
   padding: 30px;
 }
