--- a/client/src/Title.css
+++ b/client/src/Title.css
@@ -1,16 +1,17 @@
 .Title {
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .Title-intro {
-  font-size: 48px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
   flex: 1;
+  font-size: 48px;
+  margin: 20px;
+  margin-top: 80px;
+  display: flex;
+  text-align: center;
 }
 
 .Title-logo {
@@ -18,7 +19,6 @@
 }
 
 .Title-swipe {
-  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
