--- a/client/src/Turn.css
+++ b/client/src/Turn.css
@@ -1,5 +1,5 @@
 .Turn {
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
