--- a/client/src/components/Swipeable.css
+++ b/client/src/components/Swipeable.css
@@ -7,29 +7,28 @@
 
 .Swipeable-spring {
   position: relative;
-  height: 100%;
   width: 100%;
 }
 
 .Swipeable-views {
+  flex: 1;
   display: flex;
   justify-content: space-between;
-  height: 100%;
 }
 
 .Swipeable-left {
+  flex: 1;
   background-color: green;
-  height: 100%;
 }
 
 .Swipeable-children {
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .Swipeable-right {
+  flex: 1;
   background-color: orange;
-  height: 100%;
 }
